# sanitarskyi-tg-coding-assistant

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  settings.py
bot/: __init__.py  agent_manager.py  handlers.py  repository_manager.py  router.py
cursor/: __init__.py  client.py  schemas.py  task_manager.py
tests/: test_cursor_client.py
